[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-health-bot"
version = "0.1.0"
description = "Read-only Reddit community health summaries with webhook/post options."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Community Health Bot Maintainers"}]
dependencies = [
  "praw==7.8.1",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "requests==2.31.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.2"]

[project.scripts]
community-health-bot = "community_health_bot.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
